globus-dsi-rest (0.29-1+gt6.@distro@) @distro@; urgency=low

  * Thu Apr 13 2017 Globus Toolkit <support@globus.org> - 0.29-1
  * Add multiple-block data writer
  * Fix documentation typos

 -- Globus Toolkit <support@globus.org>  Thu, Apr 13 2017 11:06:25 -0400

globus-dsi-rest (0.28-1+gt6.@distro@) @distro@; urgency=low

  * Add multipart reader
  * Increase JSON parser error string verbosity to help debug
    API calls that sometimes return non-JSON in an error situation

 -- Globus Toolkit <support@globus.org>  Wed, 29 Mar 2017 16:29:15 -0400

globus-dsi-rest (0.27-1+gt6.@distro@) @distro@; urgency=low

  * Fix hang when writing a 0 byte range.

 -- Globus Toolkit <support@globus.org>  Wed, 22 Mar 2017 13:34:37 -0400

globus-dsi-rest (0.26-1+gt6.@distro@) @distro@; urgency=low

  * Don't send an empty buffer at end of file in read_gridft_op

 -- Globus Toolkit <support@globus.org>  Fri, 17 Mar 2017 16:27:42 -0400

globus-dsi-rest (0.25-1+gt6.@distro@) @distro@; urgency=low

  * Use gridftp server recommended number of outstanding buffers
  * Fix format of json log messsage
  * Don't run gridftp server fork tests as root

 -- Globus Toolkit <support@globus.org>  Mon, 13 Mar 2017 13:05:40 -0400

globus-dsi-rest (0.23-1+gt6.@distro@) @distro@; urgency=low

  * Allow NULL key or value in URI parameters

 -- Globus Toolkit <support@globus.org>  Wed, 11 Jan 2017 15:31:33 -0500

globus-dsi-rest (0.22-1+gt6.@distro@) @distro@; urgency=low

  * Ensure printable log level string is not null.
  * Leak in read_json
  * Prefer timeout error over libcurl aborted by callback error

 -- Globus Toolkit <support@globus.org>  Mon, 19 Dec 2016 15:50:55 -0500

globus-dsi-rest (0.21-1+gt6.@distro@) @distro@; urgency=low

  * Favor timeout error over libcurl aborted error

 -- Globus Toolkit <support@globus.org>  Wed, 14 Dec 2016 11:28:51 -0500

globus-dsi-rest (0.20-1+gt6.@distro@) @distro@; urgency=low

  * Favor timeout error over libcurl aborted error
