@@ -1,3 +1,9 @@
+globus-dsi-rest (0.30-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix memory buffer misuse
+
+ -- Globus Toolkit <support@globus.org>  Thu, Apr 13 2017 09:47:21 -0400
+
 globus-dsi-rest (0.29-1+gt6.@distro@) @distro@; urgency=low
 
   * Thu Apr 13 2017 Globus Toolkit <support@globus.org> - 0.29-1
